[package]
name = "claude-ctx"
version = "0.1.0"
edition = "2024"
description = "CLI utility to inspect Claude Code context window usage for a project"
repository = "https://github.com/ianzepp/claude-ctx"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
